//it's lazy updated file, so the real ChangeLog is the activity on github

+ FB2 support improvements
+ poppler-qt6 support with cmake
* DJVU support with cmake - fixed

+ autosave
* braces hl megafix

* cmake + hunspell detection fix
+ Polish UI and Manual translation by Krzysztof Jaśkiewicz
+ Rust hl support
+ The time consuming operations such as "Find in files" can be interrupted.

* Dates panel upd
+ SRT hightlighting
+ Basic Haskell hightlighting
* Good old bug with syntax hl engine (related to partial hl module file) is fixed
+ Youtube subtitles highlighting support
+ Fn - Case - Capitalize sentences

+ qt 4.x compat again

* Spellcheker module rewrite

+ lua is added for script intepritators (Fn - Script)
+ Fn::Script: bat, btm scripts support (Win)
+ Fn::Script: cmd //REXX  

* old format for keywords (in syntax hl files) with ";" as the delimeter is dropped, use current one (regexp) instead if you write own hl files
see /hls dir for examples

+ Ctrl-mouse wheel to zoom text at current tab

+ Functions - Analysis - UNITAZ sorting length
+ Functions - Filter - Filter by repetitions
+ Functions - Sort - Sort by length

+ os2:: single application mode
* so2:: tea-qmake.pro is destined to Qt5 now
* single application mode - fixed on UNIX/Win

* fixes cmake file for install icons and desktop file
* OS/2 fix

* cmake's make dist creates tarball with dirname as at github, i.e. tea-qt-<ver>

+ Tune::UI Mode:: Classic/Docked

- Tune::Interface::Override locale
+ Tune::Interface::UI Language list

* CMake:: TEA QML stuff is disabled by default.
  To enable:
  cmake -DUSE_QML=True 

* Meson::
  QML stuff is disabled

* Text to HTML - fixed
* drag and drop - fixed

* Nav - Prev/Next tab, now circled
+ Tune - Interface :: new, simplified font selectors (also workaround of Qt 5.13 font bug)

+ Fm - Checksum menu
+ Fm - Checksum menu - MD4, MD5, SHA1, SHA 224, all SHA-2, 3, Keccak

+ Functions - Text - Anagram
+ Tune::Common - Use Enca for charset detection