@@ -1,5 +1,7 @@
 //it's lazy updated file, so the real ChangeLog is the activity on github
 
+* single application mode great fix
+
 + FB2 support improvements
 + poppler-qt6 support with cmake
 * DJVU support with cmake - fixed
